# i-dunno

./: .cirrus.yml  .gitignore  LICENSE  Makefile.am  README.md  configure.ac
.github/actions/make-check/: action.yml
.github/workflows/: cirrus-status.yml  make-check.yml
debian/: changelog  control  copyright  i-dunno-dev.install  i-dunno-dev.manpages  i-dunno.docs  i-dunno.install  i-dunno.lintian-overrides  i-dunno.manpages  libi-dunno0.install  not-installed
doc/: Makefile.am  i-dunno.1  i_dunno_deform.3  i_dunno_form.3
po/: Makevars  POTFILES.in  fr.po  i-dunno.pot
src/: Makefile.am  i-dunno-deform.c  i-dunno-form.c  i-dunno.c  i-dunno.h  pushbits.c  pushbits.h  takebits.c  takebits.h  unicodehelpers.h
testsuite/: Makefile.am  basic.c  bits.c  idunno_addrstrlen.c  interop-py-i-dunno.py  roundtrip_v6.c  short_addrstrlen.c  test_basic.c  test_bits.c  test_roundtrip_v4.c  test_roundtrip_v6.c  testutils.c  testutils.h
